yml/kube/ingress/tomcat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tomcat-http
  namespace: dev
  # annotations: 
  #   kubernets.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  rules:
  - host: tomcat.my.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tomcat-svc
            port:
              number: 8080
